[gd_scene load_steps=7 format=2]

[ext_resource path="res://spells/Lavapool.gd" type="Script" id=1]
[ext_resource path="res://assets/bubblingLava.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "bubbling"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 3, 2 ]
}

[sub_resource type="Curve" id=2]
min_value = 0.99
max_value = 4.0
_data = [ Vector2( 0.013713, 2.59218 ), 0.0, 0.0, 0, 0, Vector2( 0.997729, 1.24129 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.370861, 1 )
colors = PoolColorArray( 0.972949, 0.402001, 0.0266041, 1, 0.926074, 0.496123, 0.213431, 1, 0.972949, 0.941287, 0.611894, 1 )

[sub_resource type="CircleShape2D" id=4]
radius = 32.0

[node name="Lavapool" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
texture = ExtResource( 2 )
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/bubbling = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 20
lifetime = 0.57
emission_shape = 1
emission_sphere_radius = 32.0
gravity = Vector2( 0, -50 )
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
